crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_discover_json_needs_yes.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"--format\", \"json\", \"projects\", \"discover\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] --format json projects discover
exit: 1
--- stdout ---
--- stderr ---
Error: projects discover requires confirmation; re-run with --yes or --dry-run in JSON mode
