crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_discover_nothing.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"--format\", \"plain\", \"projects\", \"discover\", \"--dry-run\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain projects discover --dry-run
exit: 0
--- stdout ---
Scanned 1 directory(ies) under [PROJECT].
  1 project(s) already registered.
No unregistered projects found.
Dry run: nothing was registered.
--- stderr ---
