crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_prune.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"projects\", \"prune\", \"--force\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] projects prune --force
exit: 0
--- stdout ---
{
  "failed_to_reclaim": [],
  "hierarchy_cleared": [],
  "orphan_ids": [],
  "orphans_removed": 0,
  "retained_irreplaceable": [],
  "stale_ids": [],
  "stale_removed": 0
}
--- stderr ---
